<resources>
    <string name="app_name">BabyCare</string>
    <string name="baby_care">BabyCare</string>
    <string name="C_H_D_R">CHDR</string>
    <string name="Blog">Blog</string>
    <string name="SpecialNotice">Special Notice</string>
    <string name="HelpCenter">Help Center</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_new_user">Add New User</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="child_s_full_name">Child\'s Full Name</string>
    <string name="mother_s_full_name">Mother\'s Full Name</string>
    <string name="address">Address</string>
    <string name="immunization">Immunization</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="child_health_development_record">Child Health Development Record</string>
    <string name="health_record">Health Record</string>
    <string name="profile">Profile</string>
    <string name="immunization_details_about_your_baby">Immunization Details about your BABY</string>
    <string name="important_health_details_about_your_baby">Important Health Details about your BABY</string>
    <string name="your_profile">Your Profile</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="update_details">Update Details</string>
    <string name="add_immunization_details">Add Immunization Details</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="topic">Topic</string>
    <string name="description">Description</string>
    <string name="add_health_record">Add Health Record</string>
</resources>