<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D6CBEC">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/add_immunization_details"
        android:background="@color/mainTopic"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/immunization"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/txtImmunization"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/place"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/txtPlace"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/date"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/txtDate"
        android:importantForAutofill="no"
        android:inputType="date" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:gravity="center"/>

    <Button
        android:id="@+id/back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="5dp"
        android:text="@string/back"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/mainTopic"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/baby"
        android:alpha="0.8"
        android:contentDescription="@string/wallpaper"/>

</LinearLayout>